--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: John Smith
+title: KIng Kel
 description: My Personal Blog
-author: John Smith
-logo: /hcz-jekyll-blog/static/img/avatar.png
-github: https://github.com/codeasashu
+author: KIng Kel
+logo: /static/img/avatar.png
+github: https://github.com/769692436
 about: Freelance developer
 
-baseurl: "https://codeasashu.github.io/hcz-jekyll-blog"
-url: "https://codeasashu.github.io/hcz-jekyll-blog"
+baseurl: "https://769692436.github.io"
+url: "https://769692436.github.io"
 
 allowsearch: true
 
